// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should count all code locations 1`] = `
<LocationIndex
  selected={false}
>
  7
</LocationIndex>
`;

exports[`should render the titlebar correctly 1`] = `
<div
  className="issue-row"
>
  <IssueMessage
    message="Reduce the number of conditional operators (4) used in the expression"
    organization="myorg"
    rule="javascript:S1067"
  />
  <div
    className="issue-row-meta"
  >
    <ul
      className="list-inline issue-meta-list"
    >
      <li
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            Object {
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "rule": "javascript:S1067",
              "secondaryLocations": Array [],
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
            }
          }
          onFail={[MockFunction]}
          togglePopup={[MockFunction]}
        />
      </li>
      <li
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </li>
      <li
        className="issue-meta"
      >
        <Link
          className="js-issue-permalink link-no-underline"
          onClick={[Function]}
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "branch": "feature-1.0",
                "id": "myproject",
                "issues": "AVsae-CQS-9G3txfbFN2",
                "open": "AVsae-CQS-9G3txfbFN2",
              },
            }
          }
        >
          <LinkIcon />
        </Link>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the titlebar with the filter 1`] = `
<div
  className="issue-row"
>
  <IssueMessage
    message="Reduce the number of conditional operators (4) used in the expression"
    organization="myorg"
    rule="javascript:S1067"
  />
  <div
    className="issue-row-meta"
  >
    <ul
      className="list-inline issue-meta-list"
    >
      <li
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            Object {
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "rule": "javascript:S1067",
              "secondaryLocations": Array [],
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
            }
          }
          onFail={[MockFunction]}
          togglePopup={[MockFunction]}
        />
      </li>
      <li
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </li>
      <li
        className="issue-meta"
      >
        <Link
          className="js-issue-permalink link-no-underline"
          onClick={[Function]}
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "branch": undefined,
                "id": "myproject",
                "issues": "AVsae-CQS-9G3txfbFN2",
                "open": "AVsae-CQS-9G3txfbFN2",
              },
            }
          }
        >
          <LinkIcon />
        </Link>
      </li>
      <li
        className="issue-meta"
      >
        <SimilarIssuesFilter
          isOpen={false}
          issue={
            Object {
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "rule": "javascript:S1067",
              "secondaryLocations": Array [],
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
            }
          }
          onFail={[MockFunction]}
          onFilter={[MockFunction]}
          togglePopup={[MockFunction]}
        />
      </li>
    </ul>
  </div>
</div>
`;
